--- a/godtools/GTSettingsView.xib
+++ b/godtools/GTSettingsView.xib
@@ -30,10 +30,15 @@
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="IQq-W3-Ixa">
-                    <rect key="frame" x="10" y="92" width="300" height="300"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                </tableView>
+                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="GT4_SettingsScreen_ButtonBar15%_Orange_" translatesAutoresizingMaskIntoConstraints="NO" id="3L6-Tt-4ii">
+                    <rect key="frame" x="0.0" y="138" width="375" height="52"/>
+                </imageView>
+                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="GT4_SettingsScreen_ButtonBar15%_Teal_" translatesAutoresizingMaskIntoConstraints="NO" id="5rh-mB-Bcj">
+                    <rect key="frame" x="0.0" y="280" width="375" height="52"/>
+                </imageView>
+                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="GT4_SettingsScreen_ButtonBar15%_Teal_" translatesAutoresizingMaskIntoConstraints="NO" id="Y8O-ER-ARs">
+                    <rect key="frame" x="0.0" y="378" width="375" height="52"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
         </view>
@@ -41,5 +46,7 @@
     <resources>
         <image name="GT4_HomeScreen_Background_" width="320" height="568"/>
         <image name="GT4_HomeScreen_NavBar_" width="320" height="46"/>
+        <image name="GT4_SettingsScreen_ButtonBar15%_Orange_" width="375" height="52"/>
+        <image name="GT4_SettingsScreen_ButtonBar15%_Teal_" width="375" height="52"/>
     </resources>
 </document>
