--- a/godtools/GTSettingsView.xib
+++ b/godtools/GTSettingsView.xib
@@ -50,11 +50,21 @@
                         <action selector="chooseLanguageButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="Cg5-2V-JNU"/>
                     </connections>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s5f-RW-EMD">
+                    <rect key="frame" x="246" y="101" width="62" height="30"/>
+                    <state key="normal">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="previewModeSwitchButtonPressed:" destination="iN0-l3-epB" eventType="touchUpInside" id="e0r-8o-XRF"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <connections>
                 <outlet property="chooseLanguageButton" destination="e4r-uQ-0e6" id="yRn-5i-Soj"/>
                 <outlet property="chooseParallelLanguageButton" destination="dml-cR-lhq" id="yzN-0g-WKj"/>
+                <outlet property="previewModeSwitchButton" destination="s5f-RW-EMD" id="AB7-aA-HXP"/>
             </connections>
             <point key="canvasLocation" x="43" y="29"/>
         </view>
