--- a/godtools/Views/GTLanguageViewCell.xib
+++ b/godtools/Views/GTLanguageViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -14,24 +14,24 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Language name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KFe-mW-0Q8">
-                        <rect key="frame" x="55" y="12" width="249" height="20"/>
+                        <rect key="frame" x="71" y="12" width="191" height="21"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cloud download icon" translatesAutoresizingMaskIntoConstraints="NO" id="iwf-Yq-N8B">
-                        <rect key="frame" x="15" y="10" width="26" height="26"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="GT4_DownloadsScreen_CheckMark_" highlightedImage="GT4_DownloadsScreen_CheckMark_" translatesAutoresizingMaskIntoConstraints="NO" id="f9C-HA-QFg">
+                        <rect key="frame" x="21" y="11" width="33" height="24"/>
                     </imageView>
                 </subviews>
             </tableViewCellContentView>
             <connections>
-                <outlet property="downloadIcon" destination="iwf-Yq-N8B" id="irm-13-PdR"/>
+                <outlet property="checkBox" destination="f9C-HA-QFg" id="mY7-x1-rrL"/>
                 <outlet property="languageName" destination="KFe-mW-0Q8" id="dZt-fh-iai"/>
             </connections>
-            <point key="canvasLocation" x="250" y="276"/>
+            <point key="canvasLocation" x="250" y="273"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="cloud download icon" width="100" height="79"/>
+        <image name="GT4_DownloadsScreen_CheckMark_" width="24" height="18"/>
     </resources>
 </document>
