--- a/godtools/Base.lproj/Main.storyboard
+++ b/godtools/Base.lproj/Main.storyboard
@@ -98,7 +98,7 @@
                         <viewControllerLayoutGuide type="bottom" id="9ys-PG-CTe"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="rqz-vU-CUN">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="94" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="   Passcode" minimumFontSize="19" translatesAutoresizingMaskIntoConstraints="NO" id="DPa-cg-wGX">
@@ -113,13 +113,25 @@
                     <navigationItem key="navigationItem" title="Enter Passcode" id="vXJ-Nv-6Xi">
                         <barButtonItem key="leftBarButtonItem" style="plain" systemItem="cancel" id="ND8-EI-07E">
                             <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <segue destination="wb3-eT-oUL" kind="unwind" identifier="returnFromAccessCodeView" unwindAction="returnFromAccessCodeView:" id="fAV-8A-zcu"/>
+                            </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="done" id="m7a-51-udq">
                             <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         </barButtonItem>
+                        <connections>
+                            <outlet property="backBarButtonItem" destination="ND8-EI-07E" id="8pJ-SJ-Cst"/>
+                            <outlet property="rightBarButtonItem" destination="m7a-51-udq" id="jXS-eJ-Vok"/>
+                        </connections>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="accessCodeTextField" destination="DPa-cg-wGX" id="Lkh-ie-aft"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="COK-jC-sER" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="wb3-eT-oUL" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="764" y="802"/>
         </scene>
