--- a/godtools/Views/GTHomeViewCell.xib
+++ b/godtools/Views/GTHomeViewCell.xib
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -28,12 +30,6 @@
                             </mask>
                         </variation>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="live" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bb5-1O-xtc">
-                        <rect key="frame" x="53" y="20" width="66" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.27871890943877553" green="0.27871890943877553" blue="0.27871890943877553" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UeF-AY-tJc">
                         <rect key="frame" x="53" y="6" width="257" height="20"/>
                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
@@ -51,15 +47,11 @@
                     <constraint firstItem="UeF-AY-tJc" firstAttribute="top" secondItem="xhQ-1F-7kA" secondAttribute="top" constant="6" id="MT8-Ve-4tz"/>
                     <constraint firstItem="poS-Zh-dm8" firstAttribute="leading" secondItem="xhQ-1F-7kA" secondAttribute="leading" constant="10" id="RKg-aH-Qop"/>
                     <constraint firstItem="poS-Zh-dm8" firstAttribute="leading" secondItem="xhQ-1F-7kA" secondAttribute="leading" constant="10" id="SMr-uz-axb"/>
-                    <constraint firstAttribute="trailing" secondItem="Bb5-1O-xtc" secondAttribute="trailing" constant="201" id="T3L-cr-41m"/>
-                    <constraint firstItem="Bb5-1O-xtc" firstAttribute="leading" secondItem="poS-Zh-dm8" secondAttribute="trailing" constant="8" id="YRg-FY-aAA"/>
                     <constraint firstItem="UeF-AY-tJc" firstAttribute="leading" secondItem="poS-Zh-dm8" secondAttribute="trailing" constant="8" id="dxP-qC-6jr"/>
                     <constraint firstAttribute="trailing" secondItem="UeF-AY-tJc" secondAttribute="trailing" constant="10" id="i2f-Kz-9wP"/>
                     <constraint firstAttribute="bottomMargin" secondItem="UeF-AY-tJc" secondAttribute="bottom" constant="9" id="iKy-bM-TIl"/>
                     <constraint firstItem="poS-Zh-dm8" firstAttribute="top" secondItem="xhQ-1F-7kA" secondAttribute="top" constant="6" id="lrg-IW-kqT"/>
                     <constraint firstItem="poS-Zh-dm8" firstAttribute="leading" secondItem="xhQ-1F-7kA" secondAttribute="leadingMargin" constant="2" id="oPS-Cs-9sp"/>
-                    <constraint firstItem="Bb5-1O-xtc" firstAttribute="top" secondItem="xhQ-1F-7kA" secondAttribute="top" constant="20" id="qtt-UC-Syq"/>
-                    <constraint firstItem="Bb5-1O-xtc" firstAttribute="leading" secondItem="poS-Zh-dm8" secondAttribute="trailing" constant="8" symbolic="YES" id="w5h-Ot-TyK"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
@@ -72,13 +64,11 @@
                         <exclude reference="oPS-Cs-9sp"/>
                         <exclude reference="IBd-Pq-FaR"/>
                         <exclude reference="iKy-bM-TIl"/>
-                        <exclude reference="w5h-Ot-TyK"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="icon" destination="poS-Zh-dm8" id="8fp-IB-cxk"/>
-                <outlet property="statusLabel" destination="Bb5-1O-xtc" id="BIw-fI-oqE"/>
                 <outlet property="titleLabel" destination="UeF-AY-tJc" id="CBd-os-ZfH"/>
             </connections>
             <point key="canvasLocation" x="449" y="317"/>
